--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -67,17 +67,7 @@ body {
     background-color 0.5s;
   line-height: 1.6;
   font-family:
-    Inter,
-    -apple-system,
-    BlinkMacSystemFont,
-    'Segoe UI',
-    Roboto,
-    Oxygen,
-    Ubuntu,
-    Cantarell,
-    'Fira Sans',
-    'Droid Sans',
-    'Helvetica Neue',
+    'Varela Round',
     sans-serif;
   font-size: 15px;
   text-rendering: optimizeLegibility;
